[package]
name = "st-script"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"]}
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = "1.23"
serde_json = "1.0"
schemars = { version = "0.8", features = ["preserve_order", "chrono"] }
derive_more = "0.99"

[dev-dependencies]
